--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fabio</title>
+    <title>Alex Assis</title>
   </head>
   <body>
     <h1>Fabio - Sabão</h1>
