--- a/home.html
+++ b/home.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Assis</title>
+    <title>Minha página</title>
   </head>
   <body>
-    <h1>Fabio - Sabão</h1>
+    <h1>Alex Assis</h1>
 <style>
 h1 {
   color: teal;
